feat: added STEP 3, 5 and 6

--- a/Assignment_1/index.html
+++ b/Assignment_1/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Checkers!</h1>
-  <p>Names: Makoto Iida, </p>
-  <canvas id = "myCanvas"
-          style = "border-style: solid;"
-          width = "800px"
-          height = "800px"></canvas>
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Checkers!</h1>
+    <p>Names: Makoto Iida, Haruka Fujii</p>
+    <canvas
+      id="myCanvas"
+      style="border-style: solid"
+      width="800px"
+      height="800px"></canvas>
+    <script src="index.js"></script>
+  </body>
 </html>
